...
  const getMedicationForm = (medId: string) => {
    const med = medications.find(m => m.id === medId);
    return med?.form;
  };

  return (
    <View testID="screen-medication-adherence" flex={1} bg="gray.50">
      <StatusBar barStyle="dark-content" backgroundColor="transparent" translucent />

      {/* Header fixo */}
      <Box bg="gray.50" pt={16} pb={3} mx={5} zIndex={1}>
        <HStack alignItems="center" mt={2}>
          <TouchableOpacity testID="btn-back" onPress={() => navigation.goBack()}>
...
